# hotdog_controller

./: CMakeLists.txt  NOTICE.md  README.md  README_en.md  hotdog_controller_plugin.xml  package.xml
common/config/: hotdog2-ctrl-user-parameters.yaml  hotdog2-description.yaml
common/include/: control_flags_release.hpp  parameters.hpp
common/include/command_interface/: command_interface.hpp
common/include/controllers/: state_estimator_container.hpp
common/include/dynamics/: hotdog.hpp  quadruped.hpp
common/include/sim_utilities/: imu_types.hpp  visualization_data.hpp
common/include/utilities/: utilities.hpp
common/src/command_interface/: command_interface.cpp
common/src/dynamics/: quadruped.cpp
common/src/sim_utilities/: spine_board.cpp
common/src/utilities/: utilities.cpp
config/: hotdog_controller_parameters.yaml  hotdog_ros2_controllers.yaml
control/include/: robot_runner_Interface.hpp
control/include/control/: hotdog_controller.hpp  robot_runner.hpp
control/include/control/estimator/: position_velocity_estimator.hpp
control/include/control/fsm_states/: cpu_mlp.hpp  fsm_state.hpp  fsm_state_passive.hpp  fsm_state_rl_rapid.hpp  fsm_state_rl_reset.hpp  fsm_state_two_leg_stand.hpp
control/include/hotdog_controller/: hotdog_controller_node.hpp
control/src/: hotdog_controller.cpp  hotdog_controller_node.cpp  robot_runner.cpp  robot_runner_interface.cpp
control/src/convex_mpc/: convex_mpc_loco_gaits.cpp  convex_mpc_motion_gaits.cpp
control/src/fsm_states/: control_fsm.cpp  fsm_state_locomotion.cpp  fsm_state_motor_ctrl.cpp  fsm_state_passive.cpp  fsm_state_recoverystand.cpp  fsm_state_rl_rapid.cpp  fsm_state_rl_reset.cpp  fsm_state_two_leg_stand.cpp  safety_checker.cpp
control/src/offline_optimization_controller/: data_reader.cpp
control/src/wbc/wbic/: wbic.cpp
control/src/wbc_ctrl/: wbc_ctrl.cpp
control/src/wbc_ctrl/contact_set/: fixed_body_contact.cpp  single_contact.cpp
control/src/wbc_ctrl/locomotion_ctrl/: locomotion_ctrl.cpp
control/src/wbc_ctrl/task_set/: body_orientation_task.cpp  body_pitch_yaw_task.cpp  body_position_task.cpp  body_posture_task.cpp  joint_position_task.cpp  link_position_task.cpp  local_head_position_task.cpp  local_position_task.cpp  local_roll_task.cpp  local_tail_position_task.cpp
control/user/: main.cpp  sub_main.cpp
launch/: hw.launch.py  sim_gazebo.launch.py  sim_webots.launch.py
simbridge/include/: shared_memory.hpp  simulation_bridge.hpp  simulation_bridge_interface.hpp  simulator_message.hpp
simbridge/src/: simulation_bridge.cpp  simulation_bridge_interface.cpp
